# ratto-wishlist-manager

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/: urls.py
accounts/migrations/: 0001_initial.py  0002_alter_account_managers_alter_account_email.py
accounts/models/: account.py
accounts/serializers/: account.py
accounts/views/: account.py
frontend/: package.json  pnpm-lock.yaml  urls.py
frontend/app/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/app/src/: App.tsx  index.css  main.tsx  router.tsx  routes.ts
frontend/app/src/components/: theme-provider.tsx
frontend/app/src/layouts/: auth.tsx  home.tsx
frontend/app/src/lib/: alert-helper.ts  app-error.ts  http-helper.ts  wishlists.ts
frontend/app/src/providers/: auth-provider.tsx
frontend/src/app/: layout.tsx  page.tsx
ratto/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/frontend/: index.html
wishlists/: apps.py  urls.py
wishlists/migrations/: 0001_initial.py  0002_remove_producturl_last_price_and_more.py  0003_producturl_description_producturl_image_url_and_more.py  0004_wishlistedproduct_description.py  0005_wishlistedproduct_image_url.py  0006_productprice_comment.py
wishlists/models/: __init__.py  product_url.py  wishlist.py  wishlisted_product.py
wishlists/permissions/: wishlist_is_creator_or_readonly_method.py  wishlisted_product_is_creator.py
wishlists/scrapers/: base_site_scraper.py  discover_scrapers.py  generic_parsed_product.py  generic_scraper.py  json_ld_models.py  json_ld_scraper.py  metadata_scraper.py  to_list.py
wishlists/scrapers/tests/: test_parsed_product.py
wishlists/serializers/: product.py  product_url.py  wishlist.py
wishlists/views/: create_url_view.py  nested_product.py  product.py  wishlist.py
(+13 files in other folders)
