[project]
name = "ratto"
version = "0.1.0"
description = "Your product wishlist"
authors = [
    {name = "capaths",email = "pathsankan@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (==5.2.1)",
    "djangorestframework (==3.16.0)"
]

[tool.poetry]
package-mode = false
